crates/keron-lang/tests/corpus/errors/check/map_get_wrong_default_type.keron
val m: Map<String, Int> = {"a": 1}
val n: Int = get(m, "a", "fallback-string")
